adding admin/all-product
